[package]
name = "rustslack"
version = "0.0.1"
edition = "2021"
authors = ["Nobuo Miura"]
description = "Slack API for Rust"
readme = "README.md"
license = "MIT"
keywords = ["slack"]
repository = "https://github.com/nobuo-miura/rustslack"

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.115"